# cardano-client-bindings

./: .gitignore  CLAUDE.md  Makefile  README.md  RELEASING.md  TODO.md  build.gradle  devkit.md  gradle.properties  settings.gradle
.github/: CODEOWNERS
.github/workflows/: build-js-packages.yml  build-rust-crate.yml  ci.yml  integration-tests.yml  musl-alpine.yml  portable-linux-lib.yml  publish-js-dry-run.yml  publish-js.yml  publish-python.yml  publish-rust-dry-run.yml  publish-rust.yml  release.yml  static-linking-spike.yml  tag-release.yml
core/: build.gradle
docs/: README.md  quicktx.md  release-flow.md
docs/adr/: 0001-native-shared-library-ffi.md  0002-offline-stateless-no-provider.md  0003-four-language-wrappers-uniform-ffi.md  0004-bun-only-javascript-runtime.md  0005-oracle-graalvm-25.md  0006-txplan-yaml-transaction-format.md  0007-caller-supplied-plutus-exec-units.md  0008-linux-glibc-baseline-portability.md  0009-branch-and-release-process.md  0010-go-isolate-thread-affinity.md  0011-wrapper-side-chain-data-providers.md  0012-native-lib-bundled-in-wrapper-packages.md  0013-transaction-evaluators.md  0014-go-distribution-purego-runtime-resolution.md  0015-no-reference-wrapper-parity.md  README.md  template.md
docs/audits/: 2026-07-integration-test-coverage.md
docs/golang/: README.md  api.md  providers.md  transactions.md  troubleshooting.md
docs/js/: README.md  api.md  providers.md  transactions.md  troubleshooting.md
docs/python/: README.md  api.md  providers.md  transactions.md  troubleshooting.md
docs/rust/: README.md  api.md  providers.md  transactions.md  troubleshooting.md
docs/spikes/: smoke.c  static-linking.md
native-test/: Makefile  build.gradle  test_ccl
native-test/src/: test_ccl.c
scripts/: check_entrypoint_parity.py
test-fixtures/aiken/redeemer-check/: README.md  aiken.toml  plutus.json
test-fixtures/aiken/redeemer-check/validators/: redeemer_check.ak
test-fixtures/plutus-mint-scalus/: mint.yaml  utxos.json
test-fixtures/quicktx-intents/: collect_from.yaml  compose.yaml  donation.yaml  drep_deregistration.yaml  drep_registration.yaml  drep_update.yaml  governance_proposal.yaml  metadata.yaml  minting.yaml  native_script.yaml  pool_registration.yaml  pool_retirement.yaml  pool_update.yaml  reference_input.yaml  stake_delegation.yaml  stake_deregistration.yaml  stake_registration.yaml  stake_withdrawal.yaml  voting.yaml  voting_delegation.yaml
test-fixtures/quicktx-intents/plutus/: aiken_mint_fail.yaml  aiken_mint_pass.yaml  plutus_lock.yaml  script_collect_from.yaml  script_minting.yaml
wrappers/go/: README.md  build.gradle  go.mod  go.sum
wrappers/go/ccl/: account_test.go  address_test.go  bridge_close_test.go  ccl.go  ccl_test.go  crypto_test.go  doc.go  evaluator_test.go  ffi.go  ffi_unix.go  ffi_windows.go  intents_integration_test.go  intents_test.go  loader.go  loader_test.go  network_test.go  plutus_test.go  providers.go  providers_precision_test.go  providers_test.go  quicktx_integration_test.go  script_spend_test.go  sign_test.go  transaction_test.go  version_sync_test.go  version_test.go  wallet_test.go
wrappers/go/examples/account/: main.go
wrappers/go/examples/evaluator/: main.go
wrappers/go/examples/primitives/: main.go
wrappers/go/examples/transaction/: main.go
wrappers/js/: .gitignore  README.md  build.gradle  package.json  tsconfig.json
wrappers/js/examples/: account.js  evaluator.js  primitives.js  transaction.js
wrappers/js/scripts/: bootstrap-npm-trusted-publishing.sh  set-package-version.mjs
wrappers/js/src/: index.d.ts  index.js  provider.js  providers.js
wrappers/js/test/: ccl.test.js  compose.integration.test.js  devkit-helper.js  intents.e2e.test.js  intents.integration.test.js  lib_resolution.test.js  lifecycle.test.js  new-features.integration.test.js  provider.integration.test.js  providers.test.js  quicktx.integration.test.js  types.test-d.ts
wrappers/python/: .gitignore  README.md  build.gradle  pyproject.toml  setup.py
wrappers/python/ccl/: __init__.py  _ffi.py  account.py  address.py  crypto.py  governance.py  network.py  plutus.py  provider.py  providers.py  quicktx.py  script.py  transaction.py  wallet.py
wrappers/python/examples/: 01_account_and_keys.py  02_primitives.py  03_build_and_sign_tx.py  04_plutus_evaluator.py
wrappers/python/tests/: conftest.py  devkit_helper.py  test_account.py  test_address.py  test_compose_integration.py  test_crypto.py  test_evaluator.py  test_governance.py  test_lib_resolution.py  test_lifecycle.py  test_network.py  test_new_features_integration.py  test_plutus.py  test_provider_integration.py  test_providers.py  test_quicktx.py  test_quicktx_integration.py  test_quicktx_intents.py  test_scalus_evaluator.py  test_script.py  test_transaction.py  test_version.py  test_wallet.py
wrappers/rust/: Cargo.toml  README.md  build.gradle  build.rs
wrappers/rust/examples/: account.rs  evaluator.rs  primitives.rs  transaction.rs
wrappers/rust/scripts/: set-crate-version.sh
wrappers/rust/src/: ffi.rs  lib.rs  providers.rs
wrappers/rust/tests/: account_test.rs  address_test.rs  crypto_test.rs  governance_test.rs  integration_test.rs  intents_integration_test.rs  intents_test.rs  plutus_test.rs  providers_test.rs  quicktx_integration_test.rs  transaction_test.rs  version_sync_test.rs  wallet_test.rs
wrappers/rust/tests/common/: mod.rs
(+35 files in other folders)
