[project]
name = "cardano-client-lib"
version = "0.1.0"
description = "Python bindings for Cardano Client Lib (CCL) via GraalVM native library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/bloxbean/cardano-client-bindings"
Repository = "https://github.com/bloxbean/cardano-client-bindings"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
