[package]
name = "cardano-client-bridge"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for Cardano Client Lib (CCL) via GraalVM native library"
license = "MIT"
repository = "https://github.com/bloxbean/ccl-bridge"
readme = "README.md"

# Published as `cardano-client-bridge`, but imported as `ccl` (e.g. `use ccl::...`) — keep the short
# crate identifier stable while the registry/dist name is descriptive.
[lib]
name = "ccl"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Only pulled in by the optional `providers` feature (chain-data provider helpers); the core
# offline build does not require an HTTP client.
ureq = { version = "2", features = ["json"], optional = true }

[features]
default = []
# Optional HTTP chain-data provider helpers (Yaci DevKit, Blockfrost).
providers = ["dep:ureq"]

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
