[package]
name = "cardano-client-lib"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for Cardano Client Lib (CCL) via GraalVM native library"
license = "MIT"
repository = "https://github.com/bloxbean/cardano-client-bindings"
homepage = "https://github.com/bloxbean/cardano-client-bindings"
documentation = "https://docs.rs/cardano-client-lib"
readme = "README.md"
authors = ["bloxbean"]
keywords = ["cardano", "blockchain", "ffi", "graalvm", "cardano-client-lib"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

# Published as `cardano-client-lib`, but imported as `ccl` (e.g. `use ccl::...`) — keep the short
# crate identifier stable while the registry/dist name is descriptive.
[lib]
name = "ccl"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Only pulled in by the optional `providers` feature (chain-data provider helpers); the core
# offline build does not require an HTTP client.
ureq = { version = "2", features = ["json"], optional = true }

[features]
default = []
# Optional HTTP chain-data provider helpers (Yaci DevKit, Blockfrost).
providers = ["dep:ureq"]

[dev-dependencies]
ureq = { version = "2", features = ["json"] }

# The evaluator example uses build_with + a provider, which live behind the `providers` feature.
[[example]]
name = "evaluator"
required-features = ["providers"]
